manifests/authentik/egress-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-egress-clusterip
  namespace: tailscale
spec:
  selector:
    tailscale.com/parent-resource: authentik-egress
    tailscale.com/parent-resource-ns: authentik
  ports:
    - port: 443
      targetPort: 443
