manifests/authentik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgres
  namespace: authentik
  labels:
    app: authentik-postgres
spec:
  selector:
    app: authentik-postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-redis
  namespace: authentik
  labels:
    app: authentik-redis
spec:
  selector:
    app: authentik-redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: authentik
  labels:
    app: authentik-server
spec:
  selector:
    app: authentik-server
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
